Fixed landscape display on mobiles

--- a/web/less/main.less
+++ b/web/less/main.less
@@ -19,6 +19,10 @@ body {
   font-family: 'Uncial Antiqua', cursive;
   font-size: 30pt;
 
+  @media (max-width: 800px) {
+    font-size: 20pt;
+  }
+
   @media (max-width: 500px) {
     font-size: 16pt;
   }
